--- a/configs/gamma.yaml
+++ b/configs/gamma.yaml
@@ -1,25 +1,22 @@
-# configs/default.yaml
+# configs/gamma.yaml
 model:
   n_dims: 10
   n_positions: 100
-  n_embd: 256
-  n_layer: 6
-  n_head: 8
-  dropout: 0.1
+  n_embd: 384
+  n_layer: 8
+  n_head: 12
 
 training:
   batch_size: 32
   learning_rate: 0.0003
-  train_steps: 20000
+  train_steps: 30000
   eval_every: 500
   save_every: 1000
-  patience: 10
+  patience: 15
   seed: 42
-  warmup_steps: 1000
-  weight_decay: 0.01
 
 task:
-  task_name: gaussian
+  task_name: gamma
   task_scale: 1.0
 
 logging:
@@ -27,4 +24,4 @@ logging:
   project_name: prob-icl
   log_every: 100
 
-output_dir: outputs
+output_dir: outputs 
