--- a/configs/gaussian.yaml
+++ b/configs/gaussian.yaml
@@ -4,27 +4,39 @@ output_dir: "experiments/gaussian"
 model:
   n_dims: 2                # Input feature dimension
   n_positions: 60          # Total positions in sequence
-  n_embd: 256              # Embedding dimension
+  d_model: 256             # Embedding dimension (renamed from n_embd)
   n_layer: 12              # Number of transformer layers  
   n_head: 8                # Number of attention heads
+  kernel_type: "transformer" # Type of kernel (transformer or linear)
 
 task:
   name: "gaussian"
   task_scale: 0.25         # Scale parameter for Gaussian distribution
 
-train:
+training:
   batch_size: 64
   n_batches: 1000
   n_epochs: 20
-  lr: 0.003
+  learning_rate: 0.003
   save_every: 500
   eval_every: 100
   seed: 42
   patience: 30
   train_steps: 20000
   warmup_steps: 500
+  steps_per_epoch: 100
+  n_val_tasks: 5
+  n_test_tasks: 2
+  grad_clip: 1.0
+  weight_decay: 0.01
+
+  # Curriculum learning parameters
+  min_points: 10           # Start with this many points 
+  min_dims: 2              # Start with this many dimensions
+  point_schedule: 0.6      # Reach max points after 60% of training
+  dim_schedule: 0.8        # Reach max dimensions after 80% of training
 
 logging:
   use_wandb: false
-  project_name: prob-icl
+  project_name: "prob-icl"
   log_every: 100 
