--- a/configs/sinusoidal.yaml
+++ b/configs/sinusoidal.yaml
@@ -24,8 +24,8 @@ task:
 
 training:
   batch_size: 64
-  learning_rate: 7e-5
-  train_steps: 10000
+  learning_rate: 0.0001
+  train_steps: 1000
   grad_clip: 1.0
   save_every: 200
   eval_every: 50
